# CompilerPascal

./: .gitignore  CMakeLists.txt  main.cpp  pascal.txt
Headers/: Codes.h  Constants.h  Sets.h
IoModule/: IoModule.cpp  IoModule.h
Lexer/: Codes.h  Constants.h  Lexer.cpp  Lexer.h  Token.h
Semancer/: Identifier.h  Scope.cpp  Scope.h  Semancer.cpp  Semancer.h  Type.h
Syntaxer/: Sets.h  Syntaxer.cpp  Syntaxer.h  Type.h
